# hybrid-rag

./: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker_entrypoint.sh  ingest_sources.py  main.py  pyproject.toml  run_pipeline.py  test_retrieval_engine.py
.github/workflows/: build-and-push.yml
core/: __init__.py  models.py  setup_db.py
extractors/: __init__.py  base.py  code_extractor.py  mail_extractor.py  retail_extractor.py
infra/: qdrant_config.yaml
infra/qdrant_storage/: raft_state.json
infra/qdrant_storage/collections/agnostic_rag_collection/: config.json
infra/qdrant_storage/collections/agnostic_rag_collection/0/: newest_clocks.json  replica_state.json
infra/qdrant_storage/collections/agnostic_rag_collection/0/segments/42166014-e454-4bdb-a5bb-df23706e3e20/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
infra/qdrant_storage/collections/agnostic_rag_collection/0/segments/b6bec0e9-a1f2-4d30-8f1e-6c16bfc490bb/: id_tracker.mappings  id_tracker.versions  segment.json
infra/qdrant_storage/collections/agnostic_rag_collection/0/segments/b6bec0e9-a1f2-4d30-8f1e-6c16bfc490bb/vector_index-dense/: hnsw_config.json
infra/qdrant_storage/collections/agnostic_rag_collection/0/wal/: first-index
mcp_server/: __init__.py  auth.py  server.py
pipeline/: __init__.py  ingestion_worker.py
retrieval/: external_search.py  fusion.py  local_search.py  models.py  orchestrator.py  reranker.py
(+4 files in other folders)
